# LinearRegressionMini

./: CMakeLists.txt  README.md  Tester.py
include/: Classifier.h  LinearRegression.h
src/: Classifier.cpp  LinearRegression.cpp  main.cpp
